apps/keycloak/service-default-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: '9000'
    prometheus.io/scrape: 'true'
  labels:
    app: keycloak
    environment: prod
  name: keycloak
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: management
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: keycloak
  sessionAffinity: None
  type: ClusterIP
